--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
     text-decoration: none;
-    padding: 7px 20px;
+    padding: 0.3em 0.3em;
     background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
     background-position: 100% 0;
     background-size: 200% 200%;
