--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -1,6 +1,4 @@
-.input_div{
-    width: 100%;
-}
+
 
 .inputContainer * {
     box-sizing: border-box;
@@ -8,13 +6,14 @@
 .inputContainer {
     position: relative;
     width: 100%;
+    height: 60%;
     font-size: 2.5vh;
-    border-radius: 10px;
+    border-radius: 0.5em;
 }
 .inputContainer label {
     position: absolute;
-    left: 3%;
-    top: 30%;
+    left: 1em;
+    top: 1em;
     transition: .3s;
     z-index: 1;
     color: rgb(0, 0, 0, 0.7);
@@ -22,13 +21,13 @@
     cursor: text;
 }
 .inputContainer input {
-    padding: 0.8rem;
+    padding: 0.5em;
     width: 100%;
     height: 150%;
-    border: 2px solid rgb(0, 0, 0, .3);
+    border: 0.1em solid rgb(0, 0, 0, .3);
     background: rgb(0, 0, 0, 0);
     outline: none;
-    border-radius: 5px;
+    border-radius: 0.5em;
     font-size: 3vh;
     transition: .3s;
     color: rgb(0, 0, 0);
@@ -44,14 +43,15 @@
 }
 .inputContainer input:not(:placeholder-shown),
 .inputContainer input:focus {
-    border: 2px solid #adf2f7;
+    border: 0.1em solid #adf2f7;
 
 }
 .inputContainer input:not(:placeholder-shown) + label,
 .inputContainer input:focus + label {
-    top: -30%;
+    top: -40%;
     color: #0b113e;
     font-size: 2.5vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .inputContainer input::placeholder {
     font-size: 2.1vh;
