--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -204,7 +204,6 @@ html{
     
     display: flex;
     flex-direction: column;
-    animation: bounce-in-fwd 1.1s both;
     
 }
 
@@ -231,7 +230,7 @@ html{
     flex-direction: column;
     background-color: rgb(249, 247, 247);
     width: 80%;
-    height: 160vh;
+  
     margin-top: 5%;
     box-shadow: 0px 5px 10px 2px rgba(2, 3, 4, 0.474);
     padding: 2%;
@@ -240,17 +239,21 @@ html{
     overflow: auto;
 
 }
+.category_management::-webkit-scrollbar{
+    width: 0%;
+}
 
 .show_categories{
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     margin-bottom: 3%;
 }
+
 .show_categories_main{
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 62%;
+    height: 30vh;
     border-radius: 1em;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
@@ -259,7 +262,7 @@ html{
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 15%;
+    height: 15vh;
     background-color: white;
     margin-bottom: 2%;
     margin-top: 2%;
@@ -285,7 +288,7 @@ html{
 
 .category_management_moderator{
     width: 100%;
-    height: 140vh;
+   
 }
 
 .category_management_moderator_container{
@@ -293,7 +296,6 @@ html{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 75%;
     background-color: white;
     margin-bottom: 2%;
     margin-top: 2%;
@@ -303,8 +305,6 @@ html{
 
 .management{
     width: 100%;
-    height: 100%;
-   
 }
 
 .test10{
@@ -312,8 +312,7 @@ html{
     flex-direction: column;
     align-items: center;
     padding: 4%;
-    width: 90%;
-    height: 90%;
+    width: 92%;
     border-radius: 1em;
     background-color: rgba(255, 255, 255, 0.216);
     -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -382,6 +381,135 @@ html{
     margin-left: 1%;
     cursor: pointer;
 }
+.properties_container{
+    display: flex;
+    width: 90%;
+    height: 90%;
+    background-color: rgb(245, 242, 242);
+    padding: 4%;
+    border-radius: 0.5em;
+    margin-bottom: 5%;
+}
+.category_properties{
+    display: flex;
+    width: 100%;
+    height: 70%;
+ 
+}
+
+.show_properties{
+    display: flex;
+    width: 50%;
+    height: 100%;
+  
+}
+.show_properties_names{
+    width: 30%;
+    height: 100%;
+}
+.show_properties_name{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 8%;
+    margin-bottom: 4%;
+    border-radius: 0.5em;
+    background-color: rgb(234, 234, 234);
+    border: 0.1em solid rgb(234, 234, 234);
+}
+.show_properties_values{
+    margin-left: 5%;
+    width: 80%;
+    height: 100%;
+  
+}
+
+.show_properties_value{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin-left: 0.5em;
+    font-size: 2vh;
+    word-break: break-all;
+}
+
+.show_properties_value_container{
+    display: flex;
+ 
+    width: 90%;
+    height: 8%;
+    margin-bottom: 2%;
+    
+    border-radius: 0.5em;
+    background-color: rgb(168, 228, 174);
+    border: 0.1em solid rgb(234, 234, 234);
+    font-size: 2vh;
+    word-break: break-all;
+}
+
+.show_properties_value_delete{
+   align-self: flex-end;
+    width: 10%;
+    height: 100%;
+    cursor: pointer;
+}
+.create_properties_container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 15%;
+}
+.create_properties{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+
+}
+.property_add{
+    margin-top: 5%;
+    width: 40%;
+    height: 35%;
+}
+
+.property_input{
+    display: flex;
+    justify-content: center;
+    margin-top: 20%;
+    width: 100%;
+    height: 20%;
+}
+.create_property_btn{
+    margin-top: 20%;
+    width: 60%;
+    height: 30%;
+}
+
+.add_product_main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5em;
+    padding: 4em;
+    
+    height: 60vh;
+    background-color: white;
+}
+.add_product_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.select_add_product_category{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70vh;
+}
 
 h1 {
     font-size: 5.9vw;
@@ -389,7 +517,7 @@ h1 {
 
   }
   h2 {
-    font-size: 3.0vh;
+    font-size: 4.5vh;
   }
 h6{
     font-size: 2.0vh;
