--- a/src/components/UI/list/MyProductCatgoryList.module.css
+++ b/src/components/UI/list/MyProductCatgoryList.module.css
@@ -2,8 +2,10 @@
     margin-top: 2em;
     -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    width: 100%;
-   
+    padding: 2em;
+    width: 60vh;
+   background-color: rgb(255, 255, 255);
+   border-radius: 1em;
 }
 
 
@@ -36,21 +38,24 @@
 
 .list3b::-webkit-scrollbar {
     width: 0.5em;
-    background-color: #f9f9fd00;
+    background-color: #ffffff00;
   }
   
   .list3b::-webkit-scrollbar-thumb {
     border-radius: 0.5em;
-    background-color: #3facda;
+    background-color: #10db14;
   }
-  
+
+  .list3b::-webkit-scrollbar-corner {
+    
+  }
   
   
 .list3b {
 	padding:0;
 	list-style: none;
 	counter-reset: li;
-    max-height: 50vh;
+    max-height: 40vh;
     overflow: scroll;
 }	
 .list3b li {
@@ -111,4 +116,27 @@
     -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
     -moz-transform: translateX(-50%) translateY(-50%) scale(1);
     transform: translateX(-50%) translateY(-50%) scale(1);
-}	
+}
+
+.btns_container{
+  margin-top: 5vh;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 10vh;
+}
+
+.select_category{
+  width: 40%;
+  height: 70%;
+  margin-left: 5%;
+}
+
+.back_btn{
+  padding: 1em;
+  background-color: rgba(112, 213, 233, 0.277);
+  height: 70%;
+  border: none;
+  border-top-left-radius: 2em;
+  border-bottom-left-radius: 2em;
+}
