--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,12 +5,22 @@
     padding: 0px;
     margin: 0px;
     font-family: 'Roboto', sans-serif;
-    
 }
 
 #root{
     height: auto;
 }
+html::-webkit-scrollbar{
+    width: 0.7em;
+    position: absolute;
+    background-color: rgba(27, 214, 217, 0.961);
+}
+html::-webkit-scrollbar-thumb {
+    position: absolute;
+    border-radius: 0.5em;
+    background-color: #10a5db;
+}
+
 
 html{
     background: rgb(56,228,240);
@@ -493,10 +503,9 @@ html{
     flex-direction: column;
     align-items: center;
     margin-top: 5em;
-    padding: 4em;
+    padding: 2.5em;
+    background-color: rgba(255, 255, 255, 0.76);
     
-    height: 60vh;
-    background-color: white;
 }
 .add_product_container{
     display: flex;
@@ -509,6 +518,79 @@ html{
     flex-direction: column;
     align-items: center;
     width: 70vh;
+}
+.create_product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80vh;
+    height: 100%;
+    background-color: white;
+}
+.show_product_images{
+    display: flex;
+    align-items: center;
+    width: 80%;
+    margin: 5%;
+    height: 18vh;
+    overflow: scroll;
+    background-color: rgba(230, 230, 230, 0.647);
+    border-radius: 1em;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 0.3em 0.6em -0.2em inset, rgba(0, 0, 0, 0.3) 0px 0.2em 0.4em -0.2em inset;
+    overflow-y: hidden;
+}
+
+.show_product_images::-webkit-scrollbar {
+    width: 0.1em;
+    height: 0.4em;
+    background-color: #f9f9fd00;
+    margin-top: 2%;
+  }
+  
+  .show_product_images::-webkit-scrollbar-thumb {
+    border-radius: 0.5em;
+    background-color: #107b5e;
+  }
+.show_product_images::-webkit-scrollbar-corner {
+    
+}
+
+.show_product_image{
+    max-width: 100%;
+    height: 100%;
+    border-radius: 0.5em;
+  
+
+}
+.show_product_image_container{
+    max-width: 15%;
+    height: 60%;
+    border-radius: 0.5em;
+    margin-top: 4%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.show_product_image_delete{
+    width: 40%;
+    height: 60%;
+    position: relative;
+    bottom: 120%;
+    left: 80%;
+    cursor: pointer;
+}
+.product_input_container{
+    width: 80%;
+    height: 50vh;
+    background-color: azure;
+    border-radius: 0.5em;
+}
+
+
+.my_hr{
+    width: 80%;
+    height: 0;
+    border: 0.05em solid gray;
 }
 
 h1 {
