--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 150%;
     border: 0.1em solid rgb(0, 0, 0, .3);
-    background: rgb(0, 0, 0, 0);
+    background: rgb(255, 255, 255);
     outline: none;
     border-radius: 0.5em;
     font-size: 3vh;
@@ -61,3 +61,4 @@
 .inputContainer input:focus::placeholder {
     opacity: 1;
 }
+
