--- a/src/components/UI/input/MyInput1.module.css
+++ b/src/components/UI/input/MyInput1.module.css
@@ -1,18 +1,43 @@
+.my_textarea_container{
+    width: 100%;
+    height: 20vh;
+ 
+}
 
-
-input{
-    width: 93%;
-    height: 46%;
-    border-radius: 3%;
+.my_textarea{
+    box-sizing: border-box;
+    padding: 1em;
+    resize: none;
+    white-space: pre-wrap;
+    width: 100%;
+    height: 100%;
+    border: 0.1em solid rgb(181, 181, 181);
+    border-radius: 0.5em;
     font-size: 2vh;
-    padding: 1%;
-    padding-left: 5%;
 }
 
-input:focus {
-    background-color: rgba(155, 233, 238, 0.262);
+.my_textarea:focus{
+    outline: none;
+    border: 0.1em solid #adf2f7;
+}
+.my_textarea:active{
+    outline: none;
+    border: 0.1em solid #adf2f7;
+
 }
 
-input::placeholder {
-    font-size: 2vh;
-}
+.my_textarea::-webkit-scrollbar {
+    width: 0.5em;
+    background-color: #f9f9fd00;
+  }
+  
+  .my_textarea::-webkit-scrollbar-thumb {
+    border-radius: 0.5em;
+    background-color: #18aaaa;
+  }
+  
+  .my_textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    border-radius: 0.5em;
+    background-color: #f9f9fd00;
+  }
