--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -20,6 +20,39 @@
     cursor: pointer;
 }
 
+.attribute_input_container{
+  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 2vh;
+  margin-top: 2vh;
+}
+.attribute_header {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  margin-right: 9%;
+  font-size: 0.8em;
+}
+.attribute_input{
+  width: 60%;
+}
+
+.attribute_input_textarea_container{
+  box-sizing: border-box;
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 2vh;
+  margin-top: 2vh;
+}
+
+.attribute_input_textarea{
+  margin-top: 2vh;
+  width: 100%;
+  height: 20vh;
+}
+
 @-webkit-keyframes scale-up-center {
     0% {
       -webkit-transform: scale(0.5);
