--- a/src/components/UI/Loader/Loader.module.css
+++ b/src/components/UI/Loader/Loader.module.css
@@ -25,9 +25,16 @@
         justify-content: center;
         width: 100%;
         height: 100vh;
-        z-index: 5
-        ;
-  }      
+        z-index: 5;
+  }  
+  .loader_center{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vh;
+        height: 100vh;
+        z-index: 5;
+  }    
   .cube {
     -webkit-animation: cube 2s infinite ease;
             animation: cube 2s infinite ease;
