--- a/src/components/UI/Loader/Loader.module.css
+++ b/src/components/UI/Loader/Loader.module.css
@@ -31,7 +31,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100vh;
+        width: 100%;
         height: 100vh;
         z-index: 5;
   }    
