--- a/src/components/UI/list/MyList.module.css
+++ b/src/components/UI/list/MyList.module.css
@@ -54,3 +54,66 @@
     font-size: 3vh;
     color: rgb(25, 152, 72);
   }
+
+  .category_list_container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  }
+  @-webkit-keyframes scale-up-center {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes scale-up-center {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  
+  .category_list_container::-webkit-scrollbar {
+    width: 0.2em;
+    background-color: #f9f9fd00;
+  }
+  
+  .category_list_container::-webkit-scrollbar-thumb {
+    border-radius: 0.5em;
+    background-color: #a8b9f8;
+  }
+  
+  .category_list_container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    border-radius: 0.5em;
+    background-color: #f9f9fd00;
+  }
+
+  .category_list_item{
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 3%;
+    background-color: #096ac4;
+    color: white;
+    font-size: 0.7em;
+    word-break: break-all;
+    border-radius: 1em;
+  }
