--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,7 @@
     height: auto;
 }
 html::-webkit-scrollbar{
-    width: 0.7em;
+    width: 2vh;
     position: absolute;
     background-color: rgba(27, 214, 217, 0.961);
 }
@@ -216,6 +216,20 @@ html{
     display: flex;
     flex-direction: column;
     
+}
+.reg_container_name{
+    width: 48%;
+    height: 20%;
+    
+    display: flex;
+    flex-direction: column;
+}
+.reg_container_last_name{
+    width: 48%;
+    height: 20%;
+    margin-left: 4%;
+    display: flex;
+    flex-direction: column;
 }
 
 .reg_container_icon{
@@ -626,14 +640,83 @@ html{
     height: 5vh;
 
 }
+
+.all_products_container{
+    
+    width: 45%;
+  
+}
+.all_products_category_select{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position:fixed;
+    left: 5%;
+    top: 15%;
+    width: 15%;
+    height: 80%;
+    border-radius: 1em;
+    background-color: rgb(249, 247, 247);
+    margin-right: 5vh;
+
+}
+.all_products_category_select_categories{
+    box-sizing:border-box;
+    padding: 0.5em;
+    width: 100%;
+    height: 92%;
+}
+.all_products_category_select_back_icon{
+    width: 10%;
+}
+.all_products_category_select_back_text{
+    width: 10%;
+    margin-left: 5%;
+    font-size: 0.7em;
+    color: white;
+}
+.all_products_category_select_back{
+    box-sizing: border-box;
+    width: 100%;
+    height: 8%;
+    border-radius: 0.9em 0.9em 0 0;
+    display: flex;
+    align-items: center;
+    padding: 5%;
+    background-color: rgb(162, 27, 167);
+    cursor: pointer;
+}
+.all_products_sort_container{
+    margin-top: 6vh;
+    box-sizing: border-box;
+    padding: 0.5em;
+    width: 100%;
+    height: 20vh;
+    border-radius: 1em;
+    background-color: rgb(249, 247, 247);
+
+}
 .all_products{
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2vh;
-    width: 100vh;
+    width: 100%;
+    margin-top: 6vh;
+    border-radius: 1em;
     background-color: rgb(249, 247, 247);
+}
+
+.all_products_alert{
+    box-sizing: border-box;
+    padding: 0.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    background-color: rgb(18, 112, 21);
+    border-radius: 1em;
+    color: white;
 }
 
 .product_by_id_container{
@@ -647,11 +730,127 @@ html{
     width: 50%;
     background-color: rgb(249, 247, 247);
 }
+.product_by_id_header{
+    margin: 1em;
+    font-size: 1.5em;
+}
+.product_by_id_main_info_container{
+    margin-top: 1em;
+    box-sizing: border-box;
+    padding: 1em;
+    width: 100%;
+    border-radius: 1em;
+    background-color: white;
+    box-shadow: 0 0 0.9em 0.1em rgba(2, 3, 4, 0.1);
+
+}
+
+.product_by_id_main_info_block{
+    display: flex;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.5em;
+    
+}
+.product_by_id_main_info_discription{
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.5em;
+}
+.product_discription{
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.5em;
+    background-color: #bce2f091;
+    margin-top: 1em;
+    border-radius: 0.5em;
+}
+.product_by_id_main_info_key{
+    width: 50%;
+    word-break: break-all;
+}
+.product_by_id_main_info_value{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 0.2em;
+    border-radius: 0.5em;
+    width: 50%;
+    align-self:flex-start;
+    background-color:#bce2f091;
+    word-break: break-all;
+}
+.product_by_id_date_time{
+
+    width: 100%;
+    margin-top: 1em;
+    padding: 0.5em;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.7em;
+    color: rgb(97, 206, 245);
+}
+.product_by_id_date, .product_by_id_time{
+    margin-left: 1%;
+    font-size: 0.8em;
+}
+
+.product_by_id_user_container{
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: 1em;
+    padding: 0.5em;
+    background-color: white;
+    box-shadow: 0 0 0.9em 0.1em rgba(2, 3, 4, 0.1);
+
+}
+.product_by_id_user_info_value{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 0.2em;
+    background-color:#bce2f091;
+    color: rgb(32, 31, 71);
+    border-radius: 0.5em;
+    margin-top: 0.2em;
+    font-size: 0.7em
+
+}
+.product_by_id_user_info_key{
+    display: flex;
+    align-items: center;
+    font-size: 0.7em;
+}
+.product_by_id_user_name{
+    box-sizing: border-box;
+    padding: 0.5em;
+}
+.product_by_id_user_contacts, .product_by_id_user_region{
+    width: 100%;
+    display: flex;
+    box-sizing: border-box;
+    padding: 0.5em;
+}
+.product_by_id_user_contacts_block{
+    box-sizing: border-box;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    color: rgb(47, 227, 255);
+}
 
 .my_hr{
     width: 80%;
     height: 0;
     border: 0.05em solid gray;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 h1 {
@@ -675,20 +874,10 @@ div{
     text-decoration: none;
     color: rgb(22, 21, 21);
   }
-
-  .fade-enter {
-    opacity: 0;
-  }
-  
-  .fade-enter-active {
-    opacity: 1;
-    transition: opacity 300ms;
-  }
-  .fade-exit {
-    opacity: 1;
-    }
-    
-    .fade-exit-active {
-    opacity: 0;
-    transition: opacity 300ms;
-    }
+.block_loader_center{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
