--- a/src/components/UI/avatar/MyAvatar.module.css
+++ b/src/components/UI/avatar/MyAvatar.module.css
@@ -1,7 +1,7 @@
 .avatar_container{
     box-sizing: border-box;
-    width: 1em;
-    height: 1em;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     display: flex;
     align-items: center;
