--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,13 +37,7 @@ html{
     height: 110%;
 }
 
-.navbar{
-    position:static;
-    width: 100%;
-    height: 6%;
-    background-color: #ffffff7f;
-    
-}
+
 
 
 .main{
@@ -695,8 +689,34 @@ html{
     height: 20vh;
     border-radius: 1em;
     background-color: rgb(249, 247, 247);
-
+    -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+@-webkit-keyframes slide-in-top {
+0% {
+-webkit-transform: translateY(-30%);
+      transform: translateY(-30%);
+opacity: 0;
+}
+100% {
+-webkit-transform: translateY(0);
+      transform: translateY(0);
+opacity: 1;
+}
+}
+@keyframes slide-in-top {
+0% {
+-webkit-transform: translateY(-30%);
+      transform: translateY(-30%);
+opacity: 0;
+}
+100% {
+-webkit-transform: translateY(0);
+      transform: translateY(0);
+opacity: 1;
+}
+}
+
 .all_products{
     box-sizing: border-box;
     display: flex;
@@ -707,8 +727,33 @@ html{
     margin-top: 6vh;
     border-radius: 1em;
     background-color: rgb(249, 247, 247);
+    -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
-
+@-webkit-keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(30%);
+              transform: translateX(30%);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(30%);
+              transform: translateX(30%);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
 .all_products_alert{
     box-sizing: border-box;
     padding: 0.5em;
@@ -808,7 +853,11 @@ html{
     padding: 0.5em;
     background-color: white;
     box-shadow: 0 0 0.9em 0.1em rgba(2, 3, 4, 0.1);
-
+    
+}
+.product_by_id_user_avatar{
+    width: 3em;
+    height: 3em;
 }
 .product_by_id_user_info_value{
     display: flex;
@@ -844,6 +893,76 @@ html{
     padding-right: 0.5em;
     color: rgb(47, 227, 255);
 }
+
+
+.my_profile_main_container, .profile_main_container{
+    display: flex;
+    box-sizing: border-box;
+    padding: 0.5em;
+    width: 80%;
+    margin-top: 2em;
+
+}
+.my_profile_main_discription, .profile_main_discription{
+    width: 35%;
+    height: 100%;
+}
+.profile_additional_info_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    margin-left: 5%;
+    width: 60%;
+    -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+
+}
+.profile_additional_info_select{
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    box-sizing: border-box;
+    padding: 0.5em;
+    width: 100%;
+    
+    background-color: rgb(249, 247, 247);
+    border-radius: 0.5em;
+
+}
+.profile_additional_info_show{
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+    width: 100%;
+    height: 90%;
+    background-color: rgb(249, 247, 247);
+    padding: 0.5em;
+    border-radius: 0.5em;
+    
+}
+@-webkit-keyframes slide-left {
+    0% {
+      -webkit-transform: translateX(20%);
+              transform: translateX(20%);
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+  }
+  @keyframes slide-left {
+    0% {
+      -webkit-transform: translateX(20%);
+              transform: translateX(20%);
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+  }
 
 .my_hr{
     width: 80%;
