--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -250,3 +250,152 @@
   height: 100%;
 
 }
+
+
+.product_search_container{
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em;
+  
+}
+.product_search{
+ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.product_search_input{
+  width: 90%;
+  height: 100%;
+}
+.product_search_icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 10%;
+  height: 60%;
+  cursor: pointer;
+}
+.product_sort_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(249, 247, 247);
+  border-radius: 0.5em;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0.5em;
+}
+.product_sort_btn_off{
+  width: 100%;
+  padding: 0.5;
+  height: 10%;
+  border-radius: 0.5em;
+  border: none;
+  background-image: linear-gradient(45deg, #23c3dc 0%, #fdffff 60%, rgb(255, 255, 255) 100%);
+  background-position: 100% 0;
+  background-size: 200% 200%;
+  box-shadow: 0 0 0.9em 0.1em rgba(2, 3, 4, 0.1);
+  word-break: break-all;
+  margin-top: 0.5em;
+  cursor: pointer;
+  font-size: 0.7em;
+}
+.product_sort_btn_active{
+  width: 100%;
+  padding: 0.5;
+  height: 10%;
+  border-radius: 0.5em;
+  border: none;
+  background-image: linear-gradient(45deg, #23c3dc 0%, #fdffff 60%, rgb(255, 255, 255) 100%);
+  background-position: 100% 0;
+  background-size: 200% 200%;
+  color: white;
+  box-shadow: 0 0 0.9em 0.1em rgba(2, 3, 4, 0.1);
+  word-break: break-all;
+  margin-top: 0.5em;
+  font-size: 0.7em;
+  cursor: pointer;
+  animation: color-animation .5s linear;
+  animation-fill-mode: forwards;
+}
+@keyframes color-animation {
+  from {
+      background-position: 100% 0;
+  }
+  to {
+      background-position: 0 100%;
+  }
+}
+.poroduct_sort_select_container{
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  padding: 0.2em;
+  margin-top: 0.5em;
+  justify-content: center;
+  width: 100%;
+  border-radius: 0.5em;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  cursor: pointer;
+}
+.product_sort_select_query_block{
+  width: 50%;
+}
+.product_sort_select_list{
+  margin-top: 0.3em;
+  position: absolute;
+  box-sizing: border-box;
+  padding: 0.2em;
+  width: 47%;
+  border-radius: 0.5em;
+      box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  background-color: rgb(190, 255, 255);
+  -webkit-animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+@-webkit-keyframes scale-up-ver-top {
+  0% {
+    -webkit-transform: scaleY(0.4);
+            transform: scaleY(0.4);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+}
+@keyframes scale-up-ver-top {
+  0% {
+    -webkit-transform: scaleY(0.4);
+            transform: scaleY(0.4);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+}
+.product_sort_select_list_item{
+  box-sizing: border-box;
+  padding: 0.2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.6em;
+}
+.hiden{
+  display: none;
+}
