--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,8 +11,7 @@
     height: auto;
 }
 html::-webkit-scrollbar{
-    width: 2vh;
-    position: absolute;
+    width: 1em;
     background-color: rgba(27, 214, 217, 0.961);
 }
 html::-webkit-scrollbar-thumb {
@@ -23,18 +22,26 @@ html::-webkit-scrollbar-thumb {
 
 
 html{
-    background: rgb(56,228,240);
-    background: linear-gradient(323deg, #38e4f0 20%, #2420d0 55%, #b108c8 100%);
+    background: linear-gradient(323deg, #42d1d1 0%, #2420d0 55%, #1ae754 100%);
+    background-size: 200% 200%;
     background-repeat: no-repeat;
-    background-size: cover;
     width: 100%;
-    min-height: 100%;
-}
-
+    min-height: 101%;
+    animation: color-animation 5s linear;
+    animation-fill-mode: forwards;
+  }
+  @keyframes color-animation {
+    from {
+        background-position: 100% 100%;
+    }
+    to {
+        background-position: 0 0;
+    }
+  }
 
 .App{
     width: 100%;
-    height: 110%;
+    height: 130%;
 }
 
 
@@ -513,7 +520,8 @@ html{
     align-items: center;
     margin-top: 5em;
     padding: 2.5em;
-    background-color: rgb(249, 247, 247);
+    background-color: rgb(251, 248, 248);
+    border-radius: 0.5em;
     
 }
 .add_product_container{
@@ -529,13 +537,14 @@ html{
     width: 70vh;
 }
 .create_product{
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 80vh;
     height: 100%;
-    background-color: white;
+    background-color: rgb(251, 248, 248);
     -webkit-animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: scale-out-center 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -655,6 +664,22 @@ html{
     margin-right: 5vh;
 
 }
+.all_products_sort_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position:fixed;
+    right: 5%;
+    top: 15%;
+    width: 15%;
+    height: 50%;
+    border-radius: 1em;
+    background-color: rgb(249, 247, 247);
+    margin-right: 5vh;
+    -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
 .all_products_category_select_categories{
     box-sizing:border-box;
     padding: 0.5em;
@@ -681,12 +706,12 @@ html{
     background-color: rgb(162, 27, 167);
     cursor: pointer;
 }
-.all_products_sort_container{
-    margin-top: 6vh;
+.all_products_search_container{
+    margin-top: 9vh;
     box-sizing: border-box;
     padding: 0.5em;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
     border-radius: 1em;
     background-color: rgb(249, 247, 247);
     -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -722,8 +747,10 @@ opacity: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 2vh;
     width: 100%;
+    min-height: 40vh;
     margin-top: 6vh;
     border-radius: 1em;
     background-color: rgb(249, 247, 247);
@@ -773,7 +800,10 @@ opacity: 1;
     margin-top: 2em;
     padding: 1em;
     width: 50%;
+    border-radius: 0.5em;
     background-color: rgb(249, 247, 247);
+    -webkit-animation: slide-in-blurred-left 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+    animation: slide-in-blurred-left 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
 .product_by_id_header{
     margin: 1em;
