--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -121,8 +121,8 @@
   }
 
   .product_images_container{
-    width: 60%;
-    height: 40vh;
+    width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -140,6 +140,7 @@
       width: 80%;
       height: 100%;
       border-radius: 1em;
+      cursor: pointer;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
       -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -172,6 +173,7 @@
     width: 80%;
     height: 100%;
     border-radius: 1em;
+    cursor: pointer;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 0.1em 0.2em 0px, rgba(60, 64, 67, 0.15) 0px 0.2em 0.4em 0.2em;
     -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -398,4 +400,12 @@
 }
 .hiden{
   display: none;
+}
+
+.product_list_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
