--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -827,6 +827,22 @@ opacity: 1;
     padding: 0.5em;
     
 }
+.product_slider_modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80vh;
+    height: 60vh;
+   
+}
+.product_by_id_image_slider_container{
+    width: 80%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+}
 .product_by_id_main_info_discription{
     box-sizing: border-box;
     width: 100%;
