--- a/src/components/UI/avatar/MyAvatar.module.css
+++ b/src/components/UI/avatar/MyAvatar.module.css
@@ -7,7 +7,12 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(140, 254, 247);
-    font-size: 2.5em;
     color: white;
     cursor:default;
+}
+.avatar_char_smile{
+    font-size: 1.2em;
+}
+.avatar_char_large{
+    font-size:5em
 }
