--- a/src/components/profile/User.module.css
+++ b/src/components/profile/User.module.css
@@ -111,9 +111,37 @@
     width: 100%;
     height: 100%;
     
-    -webkit-animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    -webkit-animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+@-webkit-keyframes scale-up-ver-top {
+        0% {
+          -webkit-transform: scaleY(0.4);
+                  transform: scaleY(0.4);
+          -webkit-transform-origin: 100% 0%;
+                  transform-origin: 100% 0%;
+        }
+        100% {
+          -webkit-transform: scaleY(1);
+                  transform: scaleY(1);
+          -webkit-transform-origin: 100% 0%;
+                  transform-origin: 100% 0%;
+        }
+      }
+      @keyframes scale-up-ver-top {
+        0% {
+          -webkit-transform: scaleY(0.4);
+                  transform: scaleY(0.4);
+          -webkit-transform-origin: 100% 0%;
+                  transform-origin: 100% 0%;
+        }
+        100% {
+          -webkit-transform: scaleY(1);
+                  transform: scaleY(1);
+          -webkit-transform-origin: 100% 0%;
+                  transform-origin: 100% 0%;
+        }
+      }
 .user_products_list{
     display: flex;
     flex-direction: column;
@@ -123,45 +151,86 @@
     padding-bottom: 2em;
 }
 .user_opinions{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     height: 100%;
-    -webkit-animation: puff-in-center 0.4s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 0.4s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    padding-bottom: 1em;
+    -webkit-animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+
 }
 
-@-webkit-keyframes puff-in-center {
-    0% {
-      -webkit-transform: scale(1.);
-              transform: scale(1.1);
-      -webkit-filter: blur(4px);
-              filter: blur(4px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes puff-in-center {
-    0% {
-      -webkit-transform: scale(1.1);
-              transform: scale(1.1);
-      -webkit-filter: blur(4px);
-              filter: blur(4px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
-      opacity: 1;
-    }
-  }
+
+
+.comment_list_container{
+        box-sizing: border-box;
+        padding: 0.5em 0.5em 2em 0.5em;
+        width: 100%;   
+}
   
+.comment_block{
+        margin-top: 1em;
+   box-sizing: border-box;
+   display: flex;
+   padding: 0.5em;
+   width: 100%;
+        background-color: white;
+        border-radius: 0.5em;
+        box-shadow: 0 0 0.9em 0.1em rgba(2, 3, 4, 0.1);
+
+}
+.comment_avatar{
+        margin: 0.2em;
+        width: 1.5em;
+        height: 1.5em;
+        border-radius: 50%;
+}
+.comment_body{
+        width: 100%;
+ 
+  
+
+}
+.comment_sender_name{
+        margin-left: 1em;
+        color: rgb(44, 44, 213);
+        font-size: 0.8em;
+}
+.comment_text{
+        box-sizing: border-box;
+        padding: 0.5em;
+        margin-left: 1em;
+        margin-top: 0.5em;
+        font-size: 0.7em;
+        background-color: rgb(230, 227, 227);
+        border-radius: 0.5em;
+}
+.comment_exhibition_time{
+        margin-left: 1em;
+        margin-top: 0.5em;
+        font-size: 0.6em;
+        color: rgb(5, 202, 5)    
+}
+
+.comment_btns{
+        position: absolute;
+        right: 5%;
+        display: flex;
+    
+}
+.comment_edit{
+        width: 0.7em;
+        height: 0.7em;
+        margin-right: 0.5em;
+        cursor: pointer;
+}
+.comment_delete{
+        width: 0.7em;
+        height: 0.7em;
+        cursor: pointer;
+        
+}
+
