--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,7 +27,7 @@ html{
     background-repeat: no-repeat;
     width: 100%;
     min-height: 101%;
-    animation: color-animation 5s linear;
+    animation: color-animation 5s  linear;
     animation-fill-mode: forwards;
   }
   @keyframes color-animation {
@@ -983,9 +983,9 @@ opacity: 1;
     justify-content: center;
     margin-top: 5%;
     width: 100%;
-    height: 90%;
+    min-height: 85%;
     background-color: rgb(249, 247, 247);
-    padding: 0.5em;
+    padding: 0.5em 0.5em 10% 0.5em;
     border-radius: 0.5em;
     
 }
