--- a/src/components/UI/button/NavButton.module.css
+++ b/src/components/UI/button/NavButton.module.css
@@ -1,31 +1,85 @@
 .myBtn {
-    text-decoration: none;
-   
-  
-    padding: 7px 20px;
-    margin: 10px 20px;
-    border-radius: 25px;
-    background-image: linear-gradient(45deg, #6ab1d7 0%, #33d9de 50%, teal 101%);
-    background-position: 100% 0;
-    background-size: 200% 200%;
-    
-    border: 1px solid rgb(2, 253, 253);
- 
-    color: white;
-    
-  
-    transition: .5s;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  word-break: break-all;
+  background: local;
+  color: black;
+  font-weight: bold;
+  font-size: 0.6em;
+  text-shadow: 0.1em 0.1em 0.25em rgb(255, 255, 255);
+  cursor: pointer;
   }
   .myBtn:hover {
-    box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
-    background-position: 0 0;
-    
+    -webkit-animation: jello-horizontal 0.9s both;
+    animation: jello-horizontal 0.9s both;
+  }
+  @-webkit-keyframes jello-horizontal {
+    0% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+    30% {
+      -webkit-transform: scale3d(1.25, 0.75, 1);
+              transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      -webkit-transform: scale3d(0.75, 1.25, 1);
+              transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      -webkit-transform: scale3d(1.15, 0.85, 1);
+              transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      -webkit-transform: scale3d(0.95, 1.05, 1);
+              transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      -webkit-transform: scale3d(1.05, 0.95, 1);
+              transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+  }
+  @keyframes jello-horizontal {
+    0% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+    30% {
+      -webkit-transform: scale3d(1.25, 0.75, 1);
+              transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      -webkit-transform: scale3d(0.75, 1.25, 1);
+              transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      -webkit-transform: scale3d(1.15, 0.85, 1);
+              transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      -webkit-transform: scale3d(0.95, 1.05, 1);
+              transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      -webkit-transform: scale3d(1.05, 0.95, 1);
+              transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
   }
 
   a:link {
     text-decoration: none;
   }
 
-  a:visited{
-    color: white;
-  }
+ 
