--- a/src/components/UI/button/MyManagementButton.module.css
+++ b/src/components/UI/button/MyManagementButton.module.css
@@ -1,21 +1,24 @@
 .btn_container{
-  width: 25%;
-  height: 100%;
+  width: 50%;
+  height: 100% !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .management_btn{
-  width: 80%;
-  height: 60%;
+  width: 70%;
+  height: 100% !important;
   border: none;
   border-radius: 1em;
-  font-size: 2vh;
+  font-size: 1.5vh;
   cursor: pointer;
+  background-color: #ffffff;
+  padding: 6px;
 }
 
 .management_btn:hover{
-  background-color: rgb(104, 43, 226);
-  color: white;
+  color: blue;
+  transform: scale(1.2);
 }
