--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -1,7 +1,7 @@
 .aboutUsContainer{
     width: 100%;
-    height: 50vh;
-    margin-top: 20vh;
+    height: 30vh;
+    margin-top: 10vh;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -12,10 +12,10 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1.7em;
+        font-size: 1.2em;
         margin-bottom: 0.7em;
         &.animate {
-            animation: aboutUsTitleAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            animation: aboutUsTitleAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           }
           &.hidden {
             visibility: hidden;
@@ -40,9 +40,9 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1em;
+        font-size: 0.6;
         &.animate {
-            animation: aboutUsTextAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+            animation: aboutUsTextAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
           }
           &.hidden {
             visibility: hidden;
@@ -62,8 +62,8 @@
 }
 .contactsContainer{
     width: 100%;
-    height: 50vh;
-    margin-top: 20vh;
+    height: 30vh;
+    margin-top: 10vh;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -75,10 +75,10 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1.7em;
+        font-size: 1.2em;
         margin-bottom: 0.7em;
         &.animate {
-            animation: contactsTitleAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            animation: contactsTitleAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           }
           &.hidden {
             visibility: hidden;
@@ -103,9 +103,9 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1em;
+        font-size: 0.6;
         &.animate {
-            animation: contactsTextAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+            animation: contactsTextAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
           }
           &.hidden {
             visibility: hidden;
@@ -140,7 +140,7 @@
         font-size: 2.5em;
         margin-bottom: 0.7em;
         &.animate {
-            animation: headerTextAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            animation: headerTextAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           }
           &.hidden {
             visibility: hidden;
@@ -165,7 +165,7 @@
         color: transparent;
         font-size: 1.2em;
         &.animate {
-            animation: headerDescAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            animation: headerDescAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           }
           &.hidden {
             visibility: hidden;
@@ -185,8 +185,7 @@
 }
 .howItWorksContainer{
      width: 100%;
-    height: 50vh;
-    margin-top: 20vh;
+    height: 30vh;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -197,10 +196,10 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1.7em;
+        font-size: 1.2em;
         margin-bottom: 0.7em;
         &.animate {
-            animation: howItworksTitleAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            animation: howItworksTitleAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           }
           &.hidden {
             visibility: hidden;
@@ -223,9 +222,9 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1em;
+        font-size: 0.6;
         &.animate {
-            animation: howItworksTextAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+            animation: howItworksTextAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
           }
           &.hidden {
             visibility: hidden;
@@ -246,8 +245,8 @@
 
 .ourProductsContainer{
     width: 100%;
-    height: 50vh;
-    margin-top: 20vh;
+    height: 30vh;
+    margin-top: 10vh;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -260,10 +259,10 @@
         background-clip: text;
         color: transparent;
         margin-right: 2em;
-        font-size: 1.7em;
+        font-size: 1.2em;
         margin-bottom: 0.7em;
         &.animate {
-            animation: ourProductsTitleAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            animation: ourProductsTitleAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           }
           &.hidden {
             visibility: hidden;
@@ -286,9 +285,9 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1em;
+        font-size: 0.6;
         &.animate {
-            animation: ourProductsTextAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+            animation: ourProductsTextAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
           }
           &.hidden {
             visibility: hidden;
@@ -307,8 +306,8 @@
 }
 .whyWeContainer{
     width: 100%;
-    height: 50vh;
-    margin-top: 20vh;
+    height: 30vh;
+    margin-top: 10vh;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -321,10 +320,10 @@
         background-clip: text;
         color: transparent;
         margin-right: 2em;
-        font-size: 1.7em;
+        font-size: 1.2em;
         margin-bottom: 0.7em;
         &.animate {
-            animation: whyWeTitleAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 1.34) both;
+            animation: whyWeTitleAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 1.34) both;
           }
           &.hidden {
             visibility: hidden;
@@ -347,9 +346,9 @@
         background-image: linear-gradient(60deg, #7803c0, #11df06);
         background-clip: text;
         color: transparent;
-        font-size: 1em;
+        font-size: 0.6;
         &.animate {
-            animation: whyWeTextAnimation 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+            animation: whyWeTextAnimation 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s both;
           }
           &.hidden {
             visibility: hidden;
@@ -366,4 +365,20 @@
           }
         }
     
+}
+
+.sliderImgContainer{
+  width: 22%;
+  box-sizing: border-box;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  img{
+    width: 100%;
+    height: 300px;
+    border-radius: 1em;
+    outline: 3px solid #ffffff;
+    box-sizing: border-box;
+    padding: 5px;
+  }
 }
