--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -259,26 +259,26 @@
   width: 100%;
   height: 100%;
   padding: 0.5em;
-  
 }
 .product_search{
  
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
 }
 .product_search_input{
-  width: 90%;
+  width: 100%;
   height: 100%;
 }
 .product_search_icon{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 10%;
-  height: 60%;
+  width: 1em;
+  height: 1em;
+  margin-left: 0.5em;
   cursor: pointer;
 }
 .product_sort_container{
@@ -433,4 +433,15 @@
   top: 0%;
   cursor: pointer;
   
+}
+
+.selectContainer{
+  box-sizing: border-box;
+  
+}
+.select{
+  border-radius: 0.5em;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 5px;
 }
