--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -296,25 +296,42 @@ html{
 .category_headers{
     display: flex;
     justify-content: center;
+    text-align: center;
     width: 100%;
-    height: 15vh;
     background-color: white;
     margin-bottom: 2%;
     margin-top: 2%;
     border-radius: 1em;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
+.category_headers_second{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    background-color: white;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    border-radius: 1em;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    height: 100%;
+    padding: 20px;
+}
+
 .category_header {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 30%;
-    padding: 1%;
-    font-size: 2.5vh;
+    padding: 1em;
+    font-size: 1.5vh;
 }
 .category_header:hover{
-    color: blue;
+    color: #ffffff;
     scale: 1.1;
+    background-color: blue;
+    border-radius: 1em;
+    cursor: default;
 }
 .show_categories_container{
     width: 30%;
@@ -323,7 +340,7 @@ html{
 
 .category_management_moderator{
     width: 100%;
-   
+    height: 100%;
 }
 
 .category_management_moderator_container{
@@ -383,7 +400,7 @@ html{
     align-items: center;
     justify-content: center;
     width: 70%;
-    padding: 2%;
+    padding: 1%;
     margin-bottom: 5%;
     border-radius: 1em;
     
@@ -427,9 +444,7 @@ html{
 }
 .category_properties{
     display: flex;
-    width: 100%;
-    height: 70%;
- 
+    width: 100%; 
 }
 
 .show_properties{
@@ -720,7 +735,6 @@ html{
     box-sizing: border-box;
     padding: 0.5em;
     width: 100%;
-    height: 10vh;
     border-radius: 1em;
     background-color: rgb(249, 247, 247);
     -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
